--- a/content/reading-list/index.html
+++ b/content/reading-list/index.html
@@ -1,6 +1,27 @@
 <!doctype html>
 <html>
-  {{ partial "head.html" . }}
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tara Vancil’s Reading List</title>
+
+    <!-- open graph -->
+    <meta property="og:url" content="https://taravancil.com/reading-list"/>
+
+    <meta property="og:type" content="website">
+
+    <meta property="twitter:site" content="@taravancil">
+
+    <meta property="og:title" content="Tara Vancil’s Reading List">
+    <meta name="twitter:title" content="Tara Vancil’s Reading List">
+
+    <meta name="twitter:card" content="summary">
+
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Rubik:400,500,700">
+    <link rel="stylesheet" href="/css/style.min.css" />
+    <link rel="icon" href="/favicon3.ico">
+  </head>
 
   <body class="reading-list post">
     {{ partial "nav.html" }}
