--- a/content/reading-list/index.html
+++ b/content/reading-list/index.html
@@ -30,7 +30,7 @@
         <h1>Reading List</h1>
 
         <p>
-          This is an ongoing list of books I read, maintained in the spirit of Susan Fowler’s <a href="">reading list</a> and Patrick Collison’s <a href="">bookshelf</a>. I've marked the ones I particularly enjoyed with
+          This is an ongoing list of books I read, maintained in the spirit of Susan Fowler’s <a href="https://www.susanjfowler.com/reading-list/">reading list</a> and Patrick Collison’s <a href="https://patrickcollison.com/bookshelf">bookshelf</a>. I've marked the ones I particularly enjoyed with
           an asterisk (*).
         </p>
 
