--- a/content/reading-list/index.html
+++ b/content/reading-list/index.html
@@ -46,6 +46,22 @@
           {{ end }}
         </ul>
 
+        <h2>2018</h2>
+        <ul>
+          {{ range $.Site.Data.books.twentyeighteen.books }}
+            <li>
+              <h3>
+                <a href="{{ .link }}">{{ .title }}</a>
+              </h3>
+              by {{ .author }}
+              {{ if .recommend }} * {{ end }}
+              {{ if .review }}
+                (<a href="{{ .review }}">my review</a>)
+              {{ end }}
+            </li>
+          {{ end }}
+        </ul>
+
         <h2>2017</h2>
         <ul>
           {{ range $.Site.Data.books.twentyseventeen.books }}
