Rename reading list to bookshelf

--- a/content/bookshelf/index.html
+++ b/content/bookshelf/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tara Vancil’s Reading List</title>
+    <title>Tara Vancil’s Bookshelf</title>
 
     <!-- open graph -->
-    <meta property="og:url" content="https://taravancil.com/reading-list"/>
+    <meta property="og:url" content="https://taravancil.com/bookshelf"/>
 
     <meta property="og:type" content="website">
 
     <meta property="twitter:site" content="@taravancil">
 
-    <meta property="og:title" content="Tara Vancil’s Reading List">
-    <meta name="twitter:title" content="Tara Vancil’s Reading List">
+    <meta property="og:title" content="Tara Vancil’s Bookshelf">
+    <meta name="twitter:title" content="Tara Vancil’s Bookshelf">
 
     <meta name="twitter:card" content="summary">
 
@@ -23,15 +23,15 @@
     <link rel="icon" href="/favicon3.ico">
   </head>
 
-  <body class="reading-list post">
+  <body class="bookshelf post">
     {{ partial "nav.html" }}
     <div class="container">
       <main>
-        <h1>Reading List</h1>
+        <h1>Bookshelf</h1>
 
         <p>
-          This is an ongoing list of books I read, maintained in the spirit of Susan Fowler’s <a href="https://www.susanjfowler.com/reading-list/">reading list</a> and Patrick Collison’s <a href="https://patrickcollison.com/bookshelf">bookshelf</a>. I've marked the ones I particularly enjoyed with
-          an asterisk (*).
+          This is an ongoing list of books I read. I've marked the ones I
+          particularly enjoyed with an asterisk (*).
         </p>
 
         <h2>Currently reading</h2>
