Only load CSS for specific pages on those pages

--- a/content/wishlist/index.html
+++ b/content/wishlist/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:card" content="summary">
 
     <link rel="stylesheet" href="/css/style.min.css" />
+    <link rel="stylesheet" href="/css/wishlist.min.css" />
     <link rel="icon" href="/images/favicon.png">
   </head>
 
