--- a/content/wishlist/index.html
+++ b/content/wishlist/index.html
@@ -1,77 +1,81 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wishlist - Tara Vancil</title>
 
-    <!-- open graph -->
-    <meta property="og:url" content="https://taravancil.com/wishlist"/>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Wishlist - Tara Vancil</title>
 
-    <meta property="og:type" content="website">
+  <!-- open graph -->
+  <meta property="og:url" content="https://taravancil.com/wishlist" />
 
-    <meta property="twitter:site" content="@taravancil">
+  <meta property="og:type" content="website">
 
-    <meta property="og:title" content="Wishlist - Tara Vancil">
-    <meta name="twitter:title" content="Wishlist - Tara Vancil">
+  <meta property="twitter:site" content="@taravancil">
 
-    <meta name="twitter:card" content="summary">
+  <meta property="og:title" content="Wishlist - Tara Vancil">
+  <meta name="twitter:title" content="Wishlist - Tara Vancil">
 
-    <link rel="stylesheet" href="/css/style.min.css" />
-    <link rel="stylesheet" href="/css/wishlist.min.css" />
-    <link rel="icon" href="/images/favicon.png">
-  </head>
+  <meta name="twitter:card" content="summary">
 
-  <body class="wishlist">
-    {{ partial "breadcrumbs.html" . }}
+  <link rel="stylesheet" href="/css/style.min.css" />
+  <link rel="stylesheet" href="/css/wishlist.min.css" />
+  <link rel="icon" href="/images/favicon.png">
+</head>
 
-    <div class="container narrow">
-      <main role="main">
-        <h1>Wishlist</h1>
+<body class="wishlist">
+  {{ partial "breadcrumbs.html" . }}
 
-        <p>
-          This is a list of things I want, need, or like. If you're thinking about buying me a gift, thank you! You're welcome to buy something directly from the list, or use the list as inspiration.
-        </p>
+  <div class="container narrow">
+    <main role="main">
+      <h1>Wishlist</h1>
 
-        <ul class="wishlist undecorated-list">
-          {{ range sort $.Site.Data.wishlist "price" "asc" }}
-            <li class="item">
-              <span class="thumbnail-container">
-                <img class="thumbnail" src="{{ .image }}" alt="" />
-              </span>
+      <p>
+        This is a list of things I want, need, or like. If you're thinking about buying me a gift, thank you! You're
+        welcome to buy something directly from the list, or use the list as inspiration.
+      </p>
 
-              <div class="info">
-                <div class="header">
-                  <a href="{{ .buyLink }}" class="wishlist-title">
-                    {{ .title }}
-                  </a>
+      <ul class="wishlist undecorated-list">
+        {{ range sort $.Site.Data.wishlist "price" "asc" }}
+        <li class="item">
+          <span class="thumbnail-container">
+            <img class="thumbnail" src="{{ .image }}" alt="" />
+          </span>
 
-                  {{ if .price }}
-                    <span class="price">${{ .price }}</span>
-                  {{ end }}
-                </div>
+          <div class="info">
+            <div class="header">
+              <a href="{{ .buyLink }}" class="wishlist-title">
+                {{ .title }}
+              </a>
 
-                {{ if .size }}
-                  <span class="size">My size: {{ .size }}</span>
-                {{ end }}
+              {{ if .price }}
+              <span class="price">${{ .price }}</span>
+              {{ end }}
+            </div>
 
-                {{ if .note }}
-                  <p>
-                    Note: {{ .note }}
-                  </p>
-                {{ end }}
+            {{ if .size }}
+            <span class="size">My size: {{ .size }}</span>
+            {{ end }}
 
-                {{ if .buyTitle }}
-                  <a class="btn btn--small small-text dashed-border buy-link" href="{{ .buyLink }}">
-                  Buy on {{ .buyTitle }}
-                {{ end }}
-                </a>
-              </div>
-            </li>
-          {{ end }}
-        </ul>
-      </main>
-    </div>
-    {{ partial "footer.html" (dict "size" "wide") }}
-  </body>
+            {{ if .note }}
+            <p>
+              Note: {{ .note }}
+            </p>
+            {{ end }}
+
+            {{ if .buyTitle }}
+            <a class="btn btn--small small-text buy-link" href="{{ .buyLink }}">
+              Buy on {{ .buyTitle }}
+              {{ end }}
+            </a>
+          </div>
+        </li>
+        {{ end }}
+      </ul>
+    </main>
+  </div>
+  {{ partial "footer.html" (dict "size" "wide") }}
+  <script src="/js/wishlist.js"></script>
+</body>
+
 </html>
