--- a/content/wishlist/index.html
+++ b/content/wishlist/index.html
@@ -74,7 +74,7 @@
       </ul>
     </main>
   </div>
-  {{ partial "footer.html" (dict "size" "wide") }}
+  {{ partial "footer.html" }}
   <script src="/js/wishlist.js"></script>
 </body>
 
