remove upcoming presentations section

--- a/content/speaking/index.html
+++ b/content/speaking/index.html
@@ -30,26 +30,10 @@
     <main role="main">
       <h1>Speaking</h1>
 
-      <p>
-        I've spoken at a handful of events, mostly about the Web and peer-to-peer protocols. Want to invite me to your
-        event? <a href="mailto:contact@taravancil.com">Email me</a>! I'm taking it easy in 2019, but I might consider
-        speaking at an event or two.
-      </p>
-
-      <h2 class="inline-heading">Upcoming presentations</h2>
-
       <ul class="upcoming-talks">
-        <li class="talk">
-          <span class="info">
-            Nov. 15-16
-            <span aria-hidden="true" class="separator">/</span>
-            Seattle
-          </span>
-
-          <a class="title " href="https://2018.cascadiajs.com/speakers/tara-vancil">
-            CascadiaJS
-          </a>
-        </li>
+        <p>
+          <em>No upcoming presentations</em>
+        </p>
       </ul>
 
       <div class="talks">
