make head.html a reusable partial

--- a/content/speaking/index.html
+++ b/content/speaking/index.html
@@ -1,28 +1,10 @@
+
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Speaking- Tara Vancil</title>
+{{ partial "head.html" . }}
 
-  <!-- open graph -->
-  <meta property="og:url" content="https://taravancil.com/wishlist" />
-
-  <meta property="og:type" content="website">
-
-  <meta property="twitter:site" content="@taravancil">
-
-  <meta property="og:title" content="Speaking - Tara Vancil">
-  <meta name="twitter:title" content="Speaking - Tara Vancil">
-
-  <meta name="twitter:card" content="summary">
-
-  <link rel="stylesheet" href="/css/style.min.css" />
-  <link rel="stylesheet" href="/css/speaking.min.css" />
-  <link rel="icon" href="/images/favicon.png">
-</head>
-
+<link rel="stylesheet" href="/css/speaking.min.css">
 <body class="speaking">
   {{ partial "breadcrumbs.html" . }}
 
