--- a/content/wishlist/index.html
+++ b/content/wishlist/index.html
@@ -1,32 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wishlist - Tara Vancil</title>
-
-  <!-- open graph -->
-  <meta property="og:url" content="https://taravancil.com/wishlist" />
-
-  <meta property="og:type" content="website">
-
-  <meta property="twitter:site" content="@taravancil">
-
-  <meta property="og:title" content="Wishlist - Tara Vancil">
-  <meta name="twitter:title" content="Wishlist - Tara Vancil">
-
-  <meta name="twitter:card" content="summary">
-
-  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
-  <link rel="preload" href="/css/style.min.css" as="style" />
-  <link rel="preload" href="/css/wishlist.min.css" as="style" />
-  <link rel="preload" href="/js/wishlist.js" as="script" />
-
-  <link rel="stylesheet" href="/css/style.min.css" />
-  <link rel="stylesheet" href="/css/wishlist.min.css" />
-  <link rel="icon" href="/images/favicon.png">
-</head>
+{{ partial "head.html" . }}
+<link rel="preload" href="/css/wishlist.min.css" as="style" />
+<link rel="preload" href="/js/wishlist.js" as="script" />
+<link rel="stylesheet" href="/css/wishlist.min.css" />
 
 <body class="wishlist">
   {{ partial "breadcrumbs.html" . }}
