--- a/content/speaking/index.html
+++ b/content/speaking/index.html
@@ -1,81 +1,104 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-{{ partial "head.html" . }}
+    <title>Speaking - Tara Vancil</title>
+    <meta name="title" content="Speaking - Tara Vancil" />
+    <meta property="og:title" content="Speaking - Tara Vancil" />
+    <meta name="twitter:title" content="Speaking - Tara Vancil" />
 
-<link rel="stylesheet" href="/css/speaking.min.css">
-<body class="speaking">
-  {{ partial "breadcrumbs.html" . }}
+    <meta name="twitter:card" content="summary" />
+    <meta
+      property="og:image"
+      content="https://taravancil.com/images/thumbnail.png"
+    />
+    <meta
+      name="twitter:image"
+      content="https://taravancil.com/images/thumbnail.png"
+    />
+    <meta name="description" content="Presentations by Tara Vancil" />
+    <meta property="og:description" content="Presentations by Tara Vancil" />
+    <meta name="twitter:description" content="Presentations by Tara Vancil" />
 
-  <div class="container narrow">
-    <main role="main">
-      <h1>Speaking</h1>
+    <meta name="author" content="Tara Vancil" />
 
-      <ul class="upcoming-talks">
-        <p>
-          <em>No upcoming presentations</em>
-        </p>
-      </ul>
+    <link rel="canonical" href="https://taravancil.com/speaking" />
+    <meta property="og:url" content="https://taravancil.com/speaking" />
+    <meta property="og:type" content="website" />
 
-      <div class="talks">
-        <ul class="talks-list undecorated-list">
-          {{ range sort $.Site.Data.talks ".date" "desc" }}
-          <li>
-            <div class="column date">{{ .date }}</div>
+    <meta property="twitter:site" content="@taravancil" />
 
-            <div aria-hidden="true" class="column thumbnail">
-              <img aria-hidden="true" alt="" src="{{ .thumbnail }}" />
-            </div>
+    <link rel="preload" href="/css/style.min.css" as="style" />
 
-            <div class="column info">
-              <a class="title" href="{{ .link }}">{{ .title }}</a>
+    <link rel="stylesheet" href="/css/style.min.css" />
+    <link rel="icon" href="/images/favicon.png" />
+  </head>
 
-              {{ if eq .type "talk" }}
-              <div class="small-text">
+  <link rel="stylesheet" href="/css/speaking.min.css" />
+  <body class="speaking">
+    {{ partial "breadcrumbs.html" . }}
 
-                <span class="event"> {{ .event }}</span>
-                in
-                <span class="location"> {{ .location }}</span>
-              </div>
-              {{ else }}
-              <div class="event small-text">{{ .event }}</div>
-              {{ end }}
+    <div class="container narrow">
+      <main role="main">
+        <h1>Speaking</h1>
 
-              {{ if .description }}
-              <p class="description small-text">
-                {{ .description }}
-              </p>
-              {{ end }}
-
-              {{ if or .slides .recording }}
-              <div class="links">
-                {{ if .recording }}
-                <a class="recording btn btn--small" href="{{ .recording }}">
-                  {{ if eq .type "talk" }}
-                  Watch
-                  <span class="btn-icon btn-icon--right" aria-hidden="true">▶</span>
-                  {{ else }}
-                  Listen
-                  {{ end }}
-                </a>
-                {{ end }}
-
-                {{ if .slides }}
-                <a class="slides small-text" href="{{ .slides }}">
-                  Slides
-                </a>
-                {{ end }}
-              </div>
-              {{ end }}
-            </div>
-          </li>
-          {{ end }}
+        <ul class="upcoming-talks">
+          <p>
+            <em>No upcoming presentations</em>
+          </p>
         </ul>
-      </div>
-    </main>
-  </div>
-  {{ partial "footer.html" }}
-</body>
 
+        <div class="talks">
+          <ul class="talks-list undecorated-list">
+            {{ range sort $.Site.Data.talks ".date" "desc" }}
+            <li>
+              <div class="column date">{{ .date }}</div>
+
+              <div aria-hidden="true" class="column thumbnail">
+                <img aria-hidden="true" alt="" src="{{ .thumbnail }}" />
+              </div>
+
+              <div class="column info">
+                <a class="title" href="{{ .link }}">{{ .title }}</a>
+
+                {{ if eq .type "talk" }}
+                <div class="small-text">
+                  <span class="event"> {{ .event }}</span>
+                  in
+                  <span class="location"> {{ .location }}</span>
+                </div>
+                {{ else }}
+                <div class="event small-text">{{ .event }}</div>
+                {{ end }} {{ if .description }}
+                <p class="description small-text">
+                  {{ .description }}
+                </p>
+                {{ end }} {{ if or .slides .recording }}
+                <div class="links">
+                  {{ if .recording }}
+                  <a class="recording btn btn--small" href="{{ .recording }}">
+                    {{ if eq .type "talk" }} Watch
+                    <span class="btn-icon btn-icon--right" aria-hidden="true"
+                      >▶</span
+                    >
+                    {{ else }} Listen {{ end }}
+                  </a>
+                  {{ end }} {{ if .slides }}
+                  <a class="slides small-text" href="{{ .slides }}">
+                    Slides
+                  </a>
+                  {{ end }}
+                </div>
+                {{ end }}
+              </div>
+            </li>
+            {{ end }}
+          </ul>
+        </div>
+      </main>
+    </div>
+    {{ partial "footer.html" }}
+  </body>
 </html>
