--- a/content/wishlist/index.html
+++ b/content/wishlist/index.html
@@ -26,7 +26,7 @@
           <a href="mailto:contact@taravancil.com">Email me</a>.
         </p>
 
-        <div class="flex flex--right">
+        <div class="wishlist-filter flex flex--right">
           <span class="small-text">Filter by:&nbsp;&nbsp;</span>
           <div class="btn-group">
             <button
