--- a/content/wishlist/index.html
+++ b/content/wishlist/index.html
@@ -63,9 +63,7 @@
               {{ if .size }}
               <span>My size: {{ .size }}</span>
               {{ end }} {{ if .note }}
-              <p>
-                Note: {{ .note }}
-              </p>
+              <p>Note: {{ .note }}</p>
               {{ end }}
 
               <div class="wishlist-buttons flex">
